<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.boerge.simple_calculator.MainActivity">

    <EditText
        android:id="@+id/editText1"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button01"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/button01_send"
        app:layout_constraintEnd_toStartOf="@+id/button04"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button02"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />

    <Button
        android:id="@+id/button02"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/button02_send"
        app:layout_constraintEnd_toStartOf="@+id/button01"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button03"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />

    <Button
        android:id="@+id/button03"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/button03_send"
        app:layout_constraintEnd_toStartOf="@+id/button02"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />

    <Button
        android:id="@+id/button04"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/button04_send"
        app:layout_constraintEnd_toStartOf="@+id/button05"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button01"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />

    <Button
        android:id="@+id/button05"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/button05_send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button04"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />

    <Button
        android:id="@+id/button06"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/button06_send"
        app:layout_constraintEnd_toEndOf="@+id/button03"
        app:layout_constraintStart_toStartOf="@+id/button03"
        app:layout_constraintTop_toBottomOf="@+id/button03" />

    <Button
        android:id="@+id/button07"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/button07_send"
        app:layout_constraintEnd_toEndOf="@+id/button02"
        app:layout_constraintStart_toStartOf="@+id/button02"
        app:layout_constraintTop_toBottomOf="@+id/button03" />

    <Button
        android:id="@+id/button08"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:onClick="reset"
        android:text="@string/button08_send"
        app:layout_constraintEnd_toEndOf="@+id/button01"
        app:layout_constraintStart_toStartOf="@+id/button01"
        app:layout_constraintTop_toBottomOf="@+id/button01" />

    <Button
        android:id="@+id/button09"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/button09_send"
        app:layout_constraintEnd_toEndOf="@+id/button04"
        app:layout_constraintStart_toStartOf="@+id/button04"
        app:layout_constraintTop_toBottomOf="@+id/button04" />

    <Button
        android:id="@+id/button10"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/button10_send"
        app:layout_constraintEnd_toEndOf="@+id/button05"
        app:layout_constraintStart_toStartOf="@+id/button05"
        app:layout_constraintTop_toBottomOf="@+id/button05" />

    <Button
        android:id="@+id/button11"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:onClick="enterSymbol"
        android:text="@string/button11_send"
        app:layout_constraintEnd_toEndOf="@+id/button06"
        app:layout_constraintStart_toStartOf="@+id/button06"
        app:layout_constraintTop_toBottomOf="@+id/button06" />

    <Button
        android:id="@+id/button12"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:onClick="enterSymbol"
        android:text="@string/button12_send"
        app:layout_constraintEnd_toEndOf="@+id/button07"
        app:layout_constraintStart_toStartOf="@+id/button07"
        app:layout_constraintTop_toBottomOf="@+id/button07" />

    <Button
        android:id="@+id/button13"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:onClick="enterSymbol"
        android:text="@string/button13_send"
        app:layout_constraintEnd_toEndOf="@+id/button08"
        app:layout_constraintStart_toStartOf="@+id/button08"
        app:layout_constraintTop_toBottomOf="@+id/button08" />

    <Button
        android:id="@+id/button14"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:onClick="enterSymbol"
        android:text="@string/button14_send"
        app:layout_constraintEnd_toEndOf="@+id/button09"
        app:layout_constraintStart_toStartOf="@+id/button09"
        app:layout_constraintTop_toBottomOf="@+id/button09" />

    <Button
        android:id="@+id/button15"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/button15_send"
        app:layout_constraintEnd_toEndOf="@+id/button10"
        app:layout_constraintStart_toStartOf="@+id/button10"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

    <Button
        android:id="@+id/button16"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:onClick="enterSymbol"
        android:text="@string/button16_send"
        app:layout_constraintEnd_toEndOf="@+id/button11"
        app:layout_constraintStart_toStartOf="@+id/button11"
        app:layout_constraintTop_toBottomOf="@+id/button11" />

    <Button
        android:id="@+id/button17"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:onClick="enterSymbol"
        android:text="@string/button17_send"
        app:layout_constraintEnd_toEndOf="@+id/button12"
        app:layout_constraintStart_toStartOf="@+id/button12"
        app:layout_constraintTop_toBottomOf="@+id/button12" />

    <Button
        android:id="@+id/button18"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:onClick="enterSymbol"
        android:text="@string/button18_send"
        app:layout_constraintEnd_toEndOf="@+id/button13"
        app:layout_constraintStart_toStartOf="@+id/button13"
        app:layout_constraintTop_toBottomOf="@+id/button13" />

    <Button
        android:id="@+id/button19"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:onClick="enterSymbol"
        android:text="@string/button19_send"
        app:layout_constraintEnd_toEndOf="@+id/button14"
        app:layout_constraintStart_toStartOf="@+id/button14"
        app:layout_constraintTop_toBottomOf="@+id/button14" />

    <Button
        android:id="@+id/button20"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:text="@string/button20_send"
        app:layout_constraintEnd_toEndOf="@+id/button15"
        app:layout_constraintStart_toStartOf="@+id/button15"
        app:layout_constraintTop_toBottomOf="@+id/button15" />

    <Button
        android:id="@+id/button21"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:onClick="enterSymbol"
        android:text="@string/button21_send"
        app:layout_constraintEnd_toEndOf="@+id/button16"
        app:layout_constraintStart_toStartOf="@+id/button16"
        app:layout_constraintTop_toBottomOf="@+id/button16" />

    <Button
        android:id="@+id/button22"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:onClick="enterSymbol"
        android:text="@string/button22_send"
        app:layout_constraintEnd_toEndOf="@+id/button17"
        app:layout_constraintStart_toStartOf="@+id/button17"
        app:layout_constraintTop_toBottomOf="@+id/button17" />

    <Button
        android:id="@+id/button23"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:onClick="enterSymbol"
        android:text="@string/button23_send"
        app:layout_constraintEnd_toEndOf="@+id/button18"
        app:layout_constraintStart_toStartOf="@+id/button18"
        app:layout_constraintTop_toBottomOf="@+id/button18" />

    <Button
        android:id="@+id/button24"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:onClick="enterSymbol"
        android:text="@string/button24_send"
        app:layout_constraintEnd_toEndOf="@+id/button19"
        app:layout_constraintStart_toStartOf="@+id/button19"
        app:layout_constraintTop_toBottomOf="@+id/button19" />

    <Button
        android:id="@+id/button25"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:onClick="calculate"
        android:text="@string/button25_send"
        app:layout_constraintBottom_toBottomOf="@+id/button28"
        app:layout_constraintEnd_toEndOf="@+id/button20"
        app:layout_constraintStart_toStartOf="@+id/button20"
        app:layout_constraintTop_toTopOf="@+id/button24" />

    <Button
        android:id="@+id/button26"
        android:layout_width="0dp"
        android:layout_height="51dp"
        android:layout_marginTop="8dp"
        android:onClick="enterSymbol"
        android:text="@string/button26_send"
        app:layout_constraintEnd_toEndOf="@+id/button22"
        app:layout_constraintStart_toStartOf="@+id/button21"
        app:layout_constraintTop_toBottomOf="@+id/button21" />

    <Button
        android:id="@+id/button27"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:onClick="enterSymbol"
        android:text="@string/button27_send"
        app:layout_constraintEnd_toEndOf="@+id/button23"
        app:layout_constraintStart_toStartOf="@+id/button23"
        app:layout_constraintTop_toBottomOf="@+id/button23" />

    <Button
        android:id="@+id/button28"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:onClick="enterSymbol"
        android:text="@string/button28_send"
        app:layout_constraintEnd_toEndOf="@+id/button24"
        app:layout_constraintStart_toStartOf="@+id/button24"
        app:layout_constraintTop_toBottomOf="@+id/button24" />

</android.support.constraint.ConstraintLayout>
